--- a/articles/32804b577b6d6f.md
+++ b/articles/32804b577b6d6f.md
@@ -9,11 +9,11 @@ published: false
 
 Qiita 運営の方からお誘いいただき参加しました。
 
-現職は、小売の買い物体験向上に取り組む Software Engineer です。
+まず、自己紹介です。現職は、小売の買い物体験向上に取り組む Software Engineer です。
 
-題材は、Synthetic monitoring を使用した信頼性の KAIZEN です。
+今回の題材は、Synthetic monitoring を使用した信頼性の KAIZEN です。
 
-CCoE の「技術イノベーションの推進」の一環として、Synthetic monitoring を用いた信頼性の向上とサービスの KAIZEN について書きます。
+CCoE の役割の 1 つである「技術イノベーションの推進」の一環として、Synthetic monitoring を用いた信頼性の向上とサービスの KAIZEN について書きます。
 
 さらに詳しく見たい方は読み続けてください。
 
