--- a/articles/32804b577b6d6f.md
+++ b/articles/32804b577b6d6f.md
@@ -83,6 +83,26 @@ flowchart LR
     sm -- Execution --> fn
 ```
 
+検証用の合成モニターを作成します。
+
+### Create a Function
+- Ensure that more memory is available.　`--memory`
+- Set a longer timeout. `--timeout`
+```bash
+sudo gcloud functions deploy $FUNC_NAME \
+  --gen2 --region=$REGION --source="." \
+  --entry-point=CustomPuppeteerSynthetic --trigger-http --runtime=nodejs18 --project=$PROJECT_ID --memory=2G --timeout=60
+```
+
+### Create a synthetic monitor
+```bash
+sudo curl https://monitoring.googleapis.com/v3/projects/${PROJECT_ID}/uptimeCheckConfigs \
+ -H "Authorization: Bearer ${ACCESS_TOKEN}" \
+ -H "Content-Type: application/json" --request POST \
+ --data '{ "displayName": "'"${DISPLAY_NAME}"'", "synthetic_monitor": {"cloud_function_v2": {"name": "'"${FUNCTION_NAME}"'"} },}'
+```
+
+### This is the synthetic monitor.
 ![image.png](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/569971/90773703-6564-24f6-9c18-cd225d76a6a0.png)
 ![image-1.png](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/569971/e3a74b02-ea25-5bc2-d9b0-2474479c7a84.png)
 ![image-2.png](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/569971/45c70e66-0ee8-96ad-ae79-b1c07c5b868a.png)
